[package]
name = "my-renderer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogl33 = "0.3.0"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["use_mac_framework"]

