[package]
name = "my-renderer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogl33 = "0.3.0"
sdl2 = "0.35"

[env]
QT_X11_NO_MITSHM=1
MIT-SHM="Disable"

[target.'cfg(target_arch = "aarch64-apple-darwin")'.dependencies.sdl2]
version = "*"
default-features = false
features = ["use_mac_framework"]