[package]
name = "my-renderer"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ogl33 = "0.3.0"
nalgebra = "0.32.2"
# sdl2 = "0.35"
num-traits = "0.2.15"
num-iter = "0.1.43"
itertools = "0.11.0"

# [env]
# QT_X11_NO_MITSHM=1
# MIT-SHM="Disable"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["use_mac_framework"]